--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
-html {
+:root {
     --mute-color: rgb(255, 127, 80, 0.1);
     --secondary-color: 253, 107, 62;
     --highlight-color: 147, 252, 217;
     --dark-shadow-color: 0, 0, 0;
-    --box-shadow-values: 10px 20px 1px;
-    --minor-box-shadow-values: 6px 6px 0.5px;
+    --box-shadow-values: 0.5rem 0.8rem 0.05rem;
+    --minor-box-shadow-values: 0.3rem 0.3rem 0.05rem;
     --general-font: "Montserrat", "Roboto Condensed", sans-serif;
     --title-font: "Roboto Slab", serif;
-    --base-font-color: rgb(0, 0, 0, 0.85);
+    --base-font-color: rgb(0, 0, 0, 0.8);
     --base-font-size: 2vh;
     --title-font-size: 4rem;
     --header-font-size: 2rem;
@@ -23,9 +23,8 @@ html {
 body {
     display: grid;
     grid-template-columns: 1fr 6fr 1fr;
-    grid-template-rows: 1fr 1fr 0.5fr 6fr 0.5fr;
+    grid-template-rows: 1fr 1fr 6fr 4rem;
     margin: 0rem;
-    height: 100vh;
     color: var(--base-font-color);
     font-family: var(--general-font);
     line-height: var(--base-line-height);
@@ -62,11 +61,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 2rem;
 }
 
 .nav-button {
-    border-radius: 0px;
+    border-radius: 0rem;
     border: none;
     padding: 0.5rem 1rem;
     background-color: rgba(var(--highlight-color));
@@ -76,19 +75,21 @@ body {
 
 .content-container {
     grid-column: 2 / 3;
-    grid-row: 4 / 5;
+    grid-row: 3 / 4;
 
     background-color: rgba(var(--highlight-color));
     box-shadow: var(--box-shadow-values) rgba(var(--secondary-color), 0.5);
-    margin: 10px 80px;
+    margin: 1rem 4rem 2rem;
 }
 
 .content-tab {
-    display: grid;
-    grid-template-rows: 1fr 6fr;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
 
-    margin: 0px 60px;
-    gap: 20px;
+    margin: 1rem 3rem;
+    gap: 1rem;
     place-items: center;
 }
 
@@ -98,6 +99,7 @@ body {
     font-family: var(--title-font);
     font-weight: 300;
     font-size: var(--header-font-size);
+    height: 3rem;
 }
 
 .content-body {
